tests/NormalTests/paczka2/big_fuzzy/21471631.err
Error in line 7: vzq7z S869 78,26
Error in line 3: vzq7z A714 8,5
Error in line 13: vzq7z A714 p1,7
Error in line 22: pGdcPYhc A108 83,7
Error in line 35: kLs9oen2 S869 2,83
Error in line 11: vzq7z S869 58,2
Error in line 36: vzq7z A795 21,0
Error in line 41: vzq7z A714 18,3
Error in line 45: pGdcPYhc A108 48,5
Error in line 51: YdcYW2cy2 A714 9,1
Error in line 43: NqnSZZJALt A795 96,7
Error in line 62: pGdcPYhc S869 87,7
Error in line 66: kLs9oen2 A795 52,31
Error in line 71: kLs9oen2 A108 41,7
Error in line 70: YdcYW2cy2 S869 104,8
Error in line 73: vzq7z A714 17,2
Error in line 77: WaRly9JaPC A795 19,0
Error in line 87: kLs9oen2 A714 93,1
Error in line 79: YdcYW2cy2 A108 68,8
Error in line 95: YdcYW2cy2 A795 17,4
Error in line 104: kLs9oen2 A714 /0,0
Error in line 109: A795 A108 41,7
Error in line 116: NqnSZZJALt A795 14,4
Error in line 134: WaRly9JaPC S869 75,3
Error in line 103: kLs9oen2 A714 16,6
Error in line 156: kLs9oen2 A795 56,4
Error in line 170: NqnSZZJALt S869 60,6
Error in line 155: pGdcPYhc A714 255,3
Error in line 171: NqnSZZJALt A795 16,1
Error in line 190: WaRly9JaPC A108 83,5
Error in line 194: A795 A795 107,9
Error in line 202: YdcYW2cy2 A714 12,2
Error in line 210: NqnSZZJALt A795 19,6
Error in line 217: YdcYW2cy2 A795 55,1
Error in line 229: A795 A795 43,9
Error in line 240: pGdcPYhc A795 9,2
Error in line 247: pGdcPYhc A714 97,8
Error in line 245: A795 S869 43,4
